# inference-server

./: CMakeLists.txt  README.md  make.sh
docker/: build.sh  launch.sh  ubuntu-18.04.Dockerfile
http/: CMakeLists.txt  http_server.cpp
inference/: CMakeInferenceTemplate.txt  CMakeLists.txt
inference/common/: argsParser.h  buffers.h  common.h  logger.cpp  logger.h  logging.h
inference/ultraFaceOnnx/: CMakeLists.txt  buffers.h  config.ini  detection.h  draw_detection.py  inferenceContext.cpp  inferenceContext.h  main.cpp  ultraFaceOnnx.cpp  ultraFaceOnnx.h  ultraFaceOnnxSample.cpp  ultraFaceOnnxSample.h
inference/ultraFaceOnnx/include/: bindingInfo.h  buffers.h  detection.h  inferenceContext.h  statistics.h  ultraFaceOnnx.h
inference/ultraFaceOnnx/include/frames/: files_iterator.h  filesystem_frame_reader.h  frame_reader.h
inference/ultraFaceOnnx/include/http/: lib.h  listener.h  query.h  routing.h  session.h
inference/ultraFaceOnnx/include/inference/: inferenceContext.h  ultraFaceInferenceParams.h  ultraFaceOnnx.h
inference/ultraFaceOnnx/src/: files_iterator.cpp  inferenceContext.cpp  main.cpp  statistics.cpp  ultraFaceOnnx.cpp
inference/ultraFaceOnnx/src/frames/: files_iterator.cpp  filesystem_frame_reader.cpp
inference/ultraFaceOnnx/src/http/: lib.cpp  listener.cpp  query.cpp  routing.cpp  session.cpp
inference/ultraFaceOnnx/src/inference/: inferenceContext.cpp  ultraFaceOnnx.cpp
plugin/: CMakeLists.txt
presentation/: Arch.dia  boost.dia  frames.dia  managedbuffers.dia  routing
